--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "genealabs/phpgmaps": "~0.3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "spatie/laravel-permission": "^2.12",	   	
-	   "genealabs/phpgmaps" : "~0.3.0"
+        "spatie/laravel-permission": "^2.12"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
